cmake_minimum_required(VERSION 3.0)
project(RaftLib)
set(INCLUDE_DIR ../include)
set(SRC_DIR ../src)
include_directories(${INCLUDE_DIR})
file(GLOB SOURCES "${SRC_DIR}/*.cxx")
add_library(RaftLib SHARED ${SOURCES})
find_package(Threads REQUIRED)
find_package(OpenSSL REQUIRED)
target_link_libraries(RaftLib Threads::Threads OpenSSL::SSL OpenSSL::Crypto)
target_compile_options(RaftLib PUBLIC -g)