cmake_minimum_required(VERSION 3.0)
project(RaftTest)
set(INCLUDE_SRC_DIR ../include)
set(INCLUDE_TEST_DIR ./common)
include_directories(${INCLUDE_SRC_DIR})
include_directories(${INCLUDE_TEST_DIR})
file(GLOB SOURCES "unit/*.cxx")
add_executable(RaftTest ${SOURCES})
find_library(LIB NAMES RaftLib PATHS .)
target_link_libraries(RaftTest ${LIB})